--- a/links.css
+++ b/links.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
     text-decoration: none;
     list-style: none;
 }
@@ -14,13 +15,13 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url(632f15f6bb4d2a228b8ee3df_next-webdesign-dienstleistung-website-min.webp);
+    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(Who_is_a_Web_Designer.avif);
     background-position: center;
     background-size: cover;
 }
 
 h1 {
-    text-transform: capitalize;
+    text-transform: uppercase;
     font-size: 50px;
     font-weight: 600;
     color: #fff;
@@ -63,6 +64,44 @@ ion-icon {
     background: transparent;
     color: #fff;
 }
- 
+
+@media (max-width: 414px) {
+    h1 {
+        text-transform: uppercase;
+        font-size: 30px;
+        font-weight: 600;
+        color: #fff;
+        letter-spacing: 5px;
+        margin-bottom: 5px;
+    }
+    
+    .links {
+        margin-top: -30px;
+        font-size: 30px;
+        font-weight: 500;
+        text-transform: capitalize;
+    }
+    
+    .links a {
+        letter-spacing: 5px;
+        border: 2px solid #fff;
+        border-radius: 30px;
+        background-color: #fff;
+        display: flex;
+        align-items: center;
+        gap: 30px;
+        margin: 30px;
+        padding: 5px;
+        text-align: center;
+        color: rgb(11, 8, 83);
+        transition: all .5s ease;
+    }
+
+    .links a:hover  {
+        transform: translateY(20px);
+        background: transparent;
+        color: #fff;
+    }
+}
 
 
